--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -193,10 +193,8 @@ a {
 }
 
 
+/* =>  Note Styles */
 
-/*==============================
-=>  Note Styles
-================================*/
 
 .note-header {
   display: flex;
