--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -193,6 +193,13 @@ a {
 }
 
 
+.custom-icon {
+  font-size: 28px;
+  color: var(--color-main);
+  opacity: 0.6;
+}
+
+
 /* =>  Note Styles */
 
 
@@ -213,6 +220,20 @@ a {
 
 .note-header h3 svg {
   fill: var(--color-main);
+  width: 20px;
+  margin-right: 8px;
+}
+
+.note-header h4 {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  cursor: pointer;
+  color: rgba(216, 216, 216, 1)
+}
+
+.note-header h4 svg {
+  fill: var(--color-white);
   width: 20px;
   margin-right: 8px;
 }
