--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -247,6 +247,25 @@ a {
   cursor: pointer;
 }
 
+.notes-title-input {
+  background-color: var(--color-white);
+  padding: 4px 3px;
+  width: 20px;
+  height: 10px;
+  resize: none;
+  scrollbar-width: none; /* Firefox */
+}
+
+.notes-title-input textarea:active,
+.notes-title-input textarea:focus {
+  outline: none;
+  border: none;
+}
+
+.notes-title-input textarea::-webkit-scrollbar {
+  display: none;
+}
+
 .note textarea {
   background-color: var(--color-white);
   border: none;
@@ -291,6 +310,28 @@ a {
   background-color: #313131; /* Zmiana koloru tła notatki po najechaniu kursorem */
 }
 
+
+.note-datetime {
+  font-family: 'Poppins', sans-serif;
+  font-size: 10px;
+  color: rgb(248, 246, 246);
+  opacity: 0.2;
+  /* padding-left: 25px; */
+  flex-grow: 1;
+  text-align: right;
+  margin-left: auto;
+  
+}
+
+.title-and-date {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.title-and-date div {
+  margin-right: 10px;
+}
 
 .empty-block {
   font-family: 'Poppins', sans-serif;
