--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -248,22 +248,34 @@ a {
 }
 
 .notes-title-input {
+  position:relative;
   background-color: var(--color-white);
-  padding: 4px 3px;
-  width: 20px;
-  height: 10px;
+  border: none;
+  padding: 16px 12px;
+  width: 100%;
+  height: 8vh;
   resize: none;
   scrollbar-width: none; /* Firefox */
 }
 
 .notes-title-input textarea:active,
 .notes-title-input textarea:focus {
-  outline: none;
-  border: none;
+  /* outline: none; */
+  /* border: none; */
 }
 
 .notes-title-input textarea::-webkit-scrollbar {
-  display: none;
+  /* display: none; */
+}
+
+.notes-title-input::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #2b2b2b;
 }
 
 .note textarea {
