--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -106,6 +106,35 @@ a {
 }
 
 
+/* MENU STYLES */
+.sidebar {
+  height: 100%;
+  width: 220px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: var(--color-dark);
+  overflow-x: hidden;
+  padding-top: 50px;
+}
+
+.sidebar a {
+  padding: 8px 16px;
+  text-decoration: none;
+  font-size: 22px;
+  font-family: 'Lexend', sans-serif;
+  color: dark var(--color-text);
+  display: grid;
+  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
+.dark-sidebar a:hover {
+  color: var(--color-main);
+  background-color: dark var(--color-dark);
+  transform: scale(1.05);
+}
+
+
 /* NOTES STYLES */
 
 .notes-header {
@@ -150,7 +179,7 @@ a {
 
 .notes-list-item:hover {
   background-color: var(--color-bg);
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 .notes-list-item h3,
@@ -260,12 +289,12 @@ a {
 
 .notes-title-input textarea:active,
 .notes-title-input textarea:focus {
-  /* outline: none; */
-  /* border: none; */
+  outline: none;
+  border: none;
 }
 
 .notes-title-input textarea::-webkit-scrollbar {
-  /* display: none; */
+  display: none;
 }
 
 .notes-title-input::after {
@@ -283,7 +312,7 @@ a {
   border: none;
   padding: 16px 12px;
   width: 100%;
-  height: 70vh;
+  height: 60vh;
   resize: none;
   scrollbar-width: none; /* Firefox */
 }
