--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -153,6 +153,12 @@ a {
   align-items: center;
   padding-left: 5rem;
   color: #999;
+  cursor: default;
+}
+
+.logo-app {
+  width: 45px;
+  height: auto;
 }
 
 
@@ -565,17 +571,22 @@ button.learn-more .button-text {
   position: absolute;
   inset: 0;
   padding: 0.75rem 1.5rem;
+  padding-left: 10px;
   margin: 0 0 0 1.55rem;
   color: var(--color-main);
-  font-weight: 800;
+  font-weight: 15;
   line-height: 2;
   font-size: 12px;
   text-align: center;
   text-transform: uppercase;
 }
 
+.button-text {
+  width: 80%;
+}
+
 button:hover .circle {
-  width: 100%;
+  width: 80%;
 }
 
 button:hover .circle .icon.arrow {
@@ -585,4 +596,196 @@ button:hover .circle .icon.arrow {
 
 button:hover .button-text {
   color: #fff;
+  width: 80%;
+}
+
+/* TODO STYLES */
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: linear-gradient(to top left, rgb(31, 33, 36, 0.1), #1f2124 90%);
+  width: 450px;
+  padding: 50px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.8);
+  z-index: 999;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  backdrop-filter: blur(0.25rem);
+  border-radius: 20px;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 998;
+}
+
+.modal h1 {
+  overflow: auto;
+  color: var(--color-main);
+  margin: auto;
+}
+
+.modal h2 {
+  overflow: auto;
+  color: var(--color-main);
+  margin: auto 20%;
+}
+
+.modal p {
+  overflow: auto;
+  margin: auto;
+  color: var(--color-text)
+}
+
+.modal button {
+  color: var(--color-main);
+  top: 20px;
+  right: 20px;
+  position: absolute;
+}
+
+.todo-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 16px;
+}
+
+.todo-title,
+.todo-count {
+  color: var(--color-main);
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.todo-count {
+  font-size: 18px;
+  color: var(--color-main);
+  opacity: 0.6;
+}
+
+
+.todo-list {
+  padding: 0;
+  margin: 16px 0;
+  height: 70vh;
+  overflow-y: auto;
+  scrollbar-width: none; /* Firefox */
+}
+
+.todo-list::-webkit-scrollbar {
+  display: none;
+}
+
+.todos-list-item {
+  border-bottom: 1px solid  var(--color-border);
+  margin-bottom: 12px;
+  padding: 8px 16px;
+  transition: all 0.2s ease-in-out;
+}
+
+.todos-list-item:hover {
+  background-color: var(--color-bg);
+  /* cursor: pointer; */
+}
+
+.todos-list-item h3,
+.todos-list-item p span {
+  font-weight: 600;
+}
+
+
+.todos-list-item p span {
+  color: var(--color-gray);
+  display: inline-block;
+  margin-right: 8px;
+}
+
+.todos-list-item p {
+  font-size: 14px;
+  color: var(--color-light);
+}
+
+.button-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.slider-container-completed,
+.slider-container-archived {
+  position: relative;
+  width: 60px;
+  height: 35px;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.slider-container-completed:hover::before,
+.slider-container-archived:hover::before {
+  content: attr(data-info);
+  position: absolute;
+  top: -40px;
+  background-color: rgba(0, 0, 0, 0.65);
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.checkbox {
+  opacity: 0;
+  width: 0;
+  height: 0;
+  position: absolute;
+}
+
+.switch {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 25px;
+  background-color: #e9e9eb;
+  transition: all 0.2s ease-out;
+}
+
+.slider {
+  position: absolute;
+  inset: 2.2px;
+  width: 30px;
+  height: 30px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  box-shadow: 
+    0px 3px 8px rgba(0, 0, 0, 0.15),
+    0px 3px 1px rgba(0, 0, 0, 0.06);
+  transition: all 0.2s ease-out;
+}
+
+.checkbox:checked + .switch {
+  background-color: var(--color-main);
+}
+
+.checkbox:checked + .switch .slider {
+  left: calc(50% - 2.5px);
+}
+
+.archived-checkbox {
+  filter: grayscale(100%);
+  pointer-events: none;
+}
+
+.todo-datetime {
+  display: inline;
+  font-size: 10px;
+  color: var(--color-light);
 }
